--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "next": "9.5.1",
     "react": "16.13.1",
+    "react-confetti-canvas": "^1.0.3",
     "react-dom": "16.13.1"
   }
 }
